--- a/.github/workflows/pipline.yaml
+++ b/.github/workflows/pipline.yaml
@@ -8,8 +8,8 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      AWS_REGION: ${{ secrets.AWS_REGION }}
       ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
+      IMAGE_TAG: ${{ github.sha }}   # set at job level
 
     steps:
       - name: Checkout code
@@ -20,7 +20,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          aws-region: ${{ secrets.AWS_REGION }}  # required input
 
       - name: Login to Amazon ECR
         id: login-ecr
@@ -30,25 +30,21 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build and push Docker image to ECR
-        env:
-          IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build -t $ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REPOSITORY:$IMAGE_TAG
+          docker build -t "$ECR_REPOSITORY:$IMAGE_TAG" .
+          docker push "$ECR_REPOSITORY:$IMAGE_TAG"
 
       - name: Set up Helm
         uses: azure/setup-helm@v4
 
       - name: Set up Kubeconfig
         run: |
-          mkdir -p $HOME/.kube
-          echo "${{ secrets.HELM_KUBECONFIG }}" > $HOME/.kube/config
+          mkdir -p "$HOME/.kube"
+          echo "${{ secrets.HELM_KUBECONFIG }}" > "$HOME/.kube/config"
 
       - name: Upgrade Helm release
-        env:
-          IMAGE_TAG: ${{ github.sha }}
         run: |
           helm upgrade retail-application ./charts \
             --install \
-            --set image.repository=$ECR_REPOSITORY \
-            --set image.tag=$IMAGE_TAG
+            --set image.repository="$ECR_REPOSITORY" \
+            --set image.tag="$IMAGE_TAG"
